<?xml version="1.0" encoding="utf-8"?>
<!--
  © Panov Vitaly 2025 - All Rights Reserved

  Unauthorized copying of this file, via any medium is strictly prohibited
  Proprietary and confidential
  Written by Panov Vitaly 5 May 2025
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:ignore="HardcodedText">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/CustomToolBarTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextTheme"
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginLeft="@dimen/margin_min_1"
            android:layout_marginRight="@dimen/margin_min_1"
            android:maxLength="25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            android:background="@drawable/background_edit_text_selector"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="4dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:singleLine="true"/>

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextTheme"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginLeft="@dimen/margin_min_1"
            android:layout_marginRight="@dimen/margin_min_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastName"
            android:background="@drawable/background_edit_text_selector"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="4dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/BrandButtonTheme"
            android:theme="@style/BrandButtonTheme"
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_min_1"
            android:text="@string/save" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>